--- a/style.css
+++ b/style.css
@@ -1,10 +1,44 @@
 body {
    font-family: sans-serif;
+   background-color: lightgrey;
+}
+
+.input-style {
+   font-size: 1.5em;
+   color: darkblue;
+   font-weight: bold;
+   background-color: lightgrey;
+   border-radius: 5px;
+   padding: 10px;
+}
+
+
+h1 {
+   font-family: "Roboto", sans-serif;
+   font-size: 2em;
+   color: royalblue;
+   text-align: center;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   transition: font-size 0.5s;
+}
+
+h1:hover {
+   font-size: 2.5em;
+}
+
+#guess-form {
+   background-color: white;
+   border-radius: 10px;
+   padding: 20px;
+   text-align: center;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 #word {
    font-size: 2em;
+   text-align: center;
 }
+
 
 #guesses-remaining {
    color: red;
@@ -12,4 +46,10 @@ body {
 
 #wrong-guesses {
    color: darkred;
+}
+
+@media (max-width: 600px) {
+   h1 {
+      font-size: 1.5em;
+   }
 }
