--- a/style.css
+++ b/style.css
@@ -35,17 +35,23 @@ h1:hover {
 }
 
 #word {
-   font-size: 2em;
+   font-size: 3em;
    text-align: center;
+   padding: 20px;
 }
-
 
 #guesses-remaining {
    color: red;
+   font-size: 1.5em;
+   font-weight: bold;
+   text-align: center;
 }
 
 #wrong-guesses {
    color: darkred;
+   font-size: 1.5em;
+   font-weight: bold;
+   text-align: center;
 }
 
 @media (max-width: 600px) {
